--- a/src/app/components/headers/header-transaction/header-transaction.component.html
+++ b/src/app/components/headers/header-transaction/header-transaction.component.html
@@ -1,7 +1,7 @@
 <body>
   <div class="contenedor">
     <div class="iconos">
-      <app-back></app-back>
+      <app-back [routerLinkBack]="routerLinkBack"></app-back>
       <div></div>
     </div>
     <div class="detalles">
