--- a/src/app/components/utils/product-f/product-f.component.css
+++ b/src/app/components/utils/product-f/product-f.component.css
@@ -1,3 +1,13 @@
+.card {
+  width: 12rem;
+  height: 12rem;
+  background-color: transparent;
+  border: none;
+}
+.card:hover{
+  cursor: pointer;
+  opacity: 0.7;
+}
 .card-text {
   margin: 0;
   text-align: right;
@@ -7,12 +17,8 @@
 .card-body {
   margin: -4rem 0 0 0;
 }
-.card {
-  width: 12rem;
-  height: 12rem;
-  border-color: transparent;
-  border-radius: 13%;
-}
 .card-img-top {
-  border-radius: 13%;
+  border-radius: 5%;
+  width: 100%;
+  height: 100%;
 }
