--- a/src/app/pages/transaction/transaction.component.html
+++ b/src/app/pages/transaction/transaction.component.html
@@ -1,10 +1,13 @@
 <body>
   <div class="header">
     <app-header-transaction
+      [routerLinkBack]="routes.back"
       [entity]="entity"
-      [typeProduct]="typeProduct"
-      [accountNumber]="accountNumber"
+      [typeProduct]="typeProduct.nombreTipo"
+      [accountNumber]="product.numeroProducto"
     ></app-header-transaction>
   </div>
-  <app-list-transaction [accountNumber]="accountNumber"></app-list-transaction>
+  <app-list-transaction
+    [productId]="product.idProducto!"
+  ></app-list-transaction>
 </body>
