--- a/src/app/pages/my-products/my-products.component.html
+++ b/src/app/pages/my-products/my-products.component.html
@@ -1,12 +1,8 @@
 <body>
-  <app-header-cbit
-    [routerLinkBack]="routes.back"
-  ></app-header-cbit>
+  <app-header-cbit [routerLinkBack]="routes.back"></app-header-cbit>
   <div class="container">
     <div class="search">
-      <app-search
-        (onTxtFilter)="setFilterProduct($event)"
-      ></app-search>
+      <app-search (onTxtFilter)="setFilterProduct($event)"></app-search>
     </div>
     <div class="contenido">
       <div class="list-category">
@@ -14,7 +10,11 @@
         <app-list-category></app-list-category>
       </div>
       <div class="list-product-vertical">
-        <app-list-product-vertical></app-list-product-vertical>
+        <app-list-product-vertical
+          [clientId]="user.idCliente!"
+          [txtFilter]="filterProduct"
+          (onProductSelected)="setProductSelected($event)"
+        ></app-list-product-vertical>
       </div>
     </div>
   </div>
