--- a/src/app/components/utils/detail-transaction/detail-transaction.component.css
+++ b/src/app/components/utils/detail-transaction/detail-transaction.component.css
@@ -8,6 +8,10 @@ p {
   gap: 0.5rem;
   width: 100%;
 }
+.mov:hover {
+  background-color: #D9D9D9;
+  cursor: pointer;
+}
 .icono {
   width: 50px;
   height: 50px;
