--- a/src/app/components/utils/detail-transaction/detail-transaction.component.html
+++ b/src/app/components/utils/detail-transaction/detail-transaction.component.html
@@ -1,12 +1,14 @@
-<div class="mov">
+<div class="mov" (click)="setTransactionSelected()">
   <div class="icono">
     <i class="bi bi-cart-check"></i>
   </div>
   <div class="texto">
-    <p class="name_entity">{{nameEntity}}</p>
-    <p class="date">{{date}}</p>
+    <p class="name_entity">{{ transaction.destinoPago }}</p>
+    <p class="date">{{ transaction.createdAt }}</p>
   </div>
   <div class="monto">
-    <p class="amount_transaction">{{amount | currency}}</p>
+    <p class="amount_transaction">
+      {{ transaction.montoTransaccion | currency }}
+    </p>
   </div>
 </div>
