--- a/src/app/pages/voucher/voucher.component.html
+++ b/src/app/pages/voucher/voucher.component.html
@@ -51,8 +51,13 @@
         <p class="nombre-item">Fecha y hora</p>
         <p class="valores">{{ transaction.createdAt }}</p>
       </div>
-      <div class="iconShare" (click)="compartirVoucher()">
-        <img class="share" src="../../../assets/icon/share.svg" />
+      <div class="icons">
+        <div class="icon" (click)="compartirVoucher()">
+          <img class="share" src="../../../assets/icon/share.svg" />
+        </div>
+        <div class="icon" (click)="descargarVoucher()">
+          <img class="download" src="../../../assets/icon/downarrow.svg" />
+        </div>
       </div>
 
     </div>
