--- a/src/app/components/utils/camera/camera.component.css
+++ b/src/app/components/utils/camera/camera.component.css
@@ -20,6 +20,11 @@ body {
   text-align: center;
   justify-content: center;
 }
+.div-cam img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 .bi {
   color: black;
   font-size: 12rem;
