--- a/src/app/components/utils/camera/camera.component.html
+++ b/src/app/components/utils/camera/camera.component.html
@@ -1,5 +1,5 @@
 <body>
-  <div class="div-cam" [ngClass]="{ isSelfie: type == 'selfie' }">
+  <div class="div-cam" [ngClass]="{ isSelfie: type == 'selfie', 'display-none': imageData != '' }">
     <video
       #videoElement
       autoplay
@@ -13,6 +13,9 @@
       *ngIf="!isCameraActive"
       [ngClass]="{ isDocument: type == 'document' }"
     ></i>
+  </div>
+  <div class="div-cam" *ngIf="imageData != ''">
+    <img [src]="imageData" alt="Foto tomada" />
   </div>
   <button class="boton" (click)="toggleCamera()">
     <i class="bi bi-circle-fill"></i>
