Modificación de guardado de imágenes y login

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -59,7 +59,7 @@
       </form>
 
       <div class="texto-final login">
-        <p>¿No tiene una cuenta? <a (click)="goToPage(routes.register)">Regístrese</a></p>
+        <p>¿No tiene una cuenta? <a (click)="registrarse()">Regístrese</a></p>
       </div>
     </div>
 
