--- a/src/app/pages/form-selfie/form-selfie.component.html
+++ b/src/app/pages/form-selfie/form-selfie.component.html
@@ -13,12 +13,15 @@
         (onPhoto)="savePhoto($event)"
       ></app-camera>
     </div>
+    <div class="alert alert-success text-center" role="alert" *ngIf="showAlert">
+      Imagen guardada correctamente
+    </div>
     <div class="boton">
       <app-btn-cbit
         [text]="'Continuar'"
         [type]="'button'"
         [disabled]="imageData == ''"
-        (onClickEvent)="goToPage(routes.register)"
+        (onClickEvent)="continue()"
       >
       </app-btn-cbit>
     </div>
