--- a/src/app/pages/form-phone-confirm/form-phone-confirm.component.html
+++ b/src/app/pages/form-phone-confirm/form-phone-confirm.component.html
@@ -10,7 +10,7 @@
       <i class="bi bi-chat-left"></i>
     </div>
     <div class="texto">
-      <p>Escriba el código enviado a su celular</p>
+      <p>Escriba el código que se enviará a su celular</p>
     </div>
     <div class="gestion-tel">
       <div class="campo-telefono" *ngIf="!editPhone">
@@ -34,9 +34,10 @@
       <p>¿No recibió el código?</p>
     </div>
     <div class="texto">
-      <button type="button" class="btn link" disabled>
+      <button type="button" class="btn link" (click)="sendSms()" [disabled]="!enabledReenviar">
         Volver a enviar código
       </button>
+      <p>en {{ tiempoRestante }}s</p>
     </div>
     <app-btn-cbit
       [text]="'Continuar'"
