--- a/src/app/pages/terms-conditions/terms-conditions.component.html
+++ b/src/app/pages/terms-conditions/terms-conditions.component.html
@@ -1,7 +1,12 @@
 <body>
-  <app-header-cbit></app-header-cbit>
+  <app-header-cbit
+    [routerLinkBack]="routes.back"
+    [routerLinkHelp]="routes.help"
+  ></app-header-cbit>
   <div class="container">
-    <p class="tittle-text-1">ACEPTACIÓN TÉRMINOS Y CONDICIONES TRANSFERENCIAS<br /></p>
+    <p class="tittle-text-1">
+      ACEPTACIÓN TÉRMINOS Y CONDICIONES TRANSFERENCIAS<br />
+    </p>
     <p>CONDICIONES ESPECÍFICAS PARA ENVIAR DINERO</p>
     <ol class="text-1">
       <li>
@@ -99,9 +104,5 @@
       https://periferiaitgroup.com/
     </p>
   </div>
-  <app-btn-cbit
-    [text]="'Continuar'"
-    [type]="'button'"
-  >
-  </app-btn-cbit>
+  <app-btn-cbit [text]="'Continuar'" [type]="'button'" (onClickEvent)="goToPage(routes.accept)"> </app-btn-cbit>
 </body>
