--- a/src/app/components/headers/header-login/header-login.component.html
+++ b/src/app/components/headers/header-login/header-login.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="icono-help">
     <app-help
-      [routerLinHelp]="routerLinkHelp"
+      (onClickEvent)="setClickHelp()"
     ></app-help>
   </div>
   <div class="logos">
