--- a/src/app/components/headers/header-entity/header-entity.component.html
+++ b/src/app/components/headers/header-entity/header-entity.component.html
@@ -2,10 +2,10 @@
   <div class="container">
     <div class="iconos">
       <div class="back">
-        <app-back [routerLinkBack]="routerLinkBack"></app-back>
+        <app-back (onClickEvent)="setClickBack()"></app-back>
       </div>
       <div class="help">
-        <app-help [routerLinHelp]="routerLinkHelp"></app-help>
+        <app-help (onClickEvent)="setClickHelp()"></app-help>
       </div>
     </div>
     <div class="logo-entidad">
