--- a/src/app/components/utils/help/help.component.html
+++ b/src/app/components/utils/help/help.component.html
@@ -1,3 +1,3 @@
-<a routerLink="{{ routerLinHelp }}">
+<a (click)="click()">
   <img src="../../../../assets/InquiryInquiry-1.png" alt="IconHelp">
 </a>
