--- a/src/app/pages/form-document/form-document.component.html
+++ b/src/app/pages/form-document/form-document.component.html
@@ -1,6 +1,7 @@
 <body>
   <app-header-cbit
-    [routerLinkBack]="'/register'"
+    (onClickEventBack)="goToPage(routes.back)"
+    (onClickEventHelp)="goToPage(routes.help)"
   ></app-header-cbit>
   <div class="container">
     <h1 class="titulo">{{ titulo }}</h1>
@@ -18,7 +19,7 @@
           [type]="'document'"
           [icon]="'bi-postcard'"
           (onPhoto)="savePhoto($event)"
-          ></app-camera>
+        ></app-camera>
       </div>
     </div>
     <div class="alert alert-success text-center" role="alert" *ngIf="showAlert">
