--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -1,7 +1,7 @@
 <body>
   <div>
     <div class="header">
-      <app-header-login [routerLinkHelp]="routes.help"></app-header-login>
+      <app-header-login (onClickEventHelp)="(routes.help)"></app-header-login>
     </div>
     <div class="container">
       <app-btn-cbit
