--- a/src/app/pages/menu-registration/menu-registration.component.html
+++ b/src/app/pages/menu-registration/menu-registration.component.html
@@ -1,7 +1,7 @@
 <body>
   <app-header-cbit
-    [routerLinkBack]="routes.back"
-    [routerLinkHelp]="routes.help"
+    (onClickEventBack)="goToPage(routes.back)"
+    (onClickEventHelp)="goToPage(routes.help)"
   ></app-header-cbit>
   <div class="container">
     <h1 class="titulo">Completa tu información</h1>
