--- a/src/app/pages/select-entity/select-entity.component.html
+++ b/src/app/pages/select-entity/select-entity.component.html
@@ -1,6 +1,6 @@
 <app-header-cbit
-  [routerLinkBack]="routes.back"
-  [routerLinkHelp]="routes.help"
+  (onClickEventBack)="goToPage(routes.back)"
+  (onClickEventHelp)="goToPage(routes.help)"
 ></app-header-cbit>
 <div class="container">
   <div class="buscador">
