--- a/src/app/pages/transaction/transaction.component.html
+++ b/src/app/pages/transaction/transaction.component.html
@@ -1,7 +1,7 @@
 <body>
   <div class="header">
     <app-header-transaction
-      [routerLinkBack]="routes.back"
+      (onClickEventBack)="goToPage(routes.back)"
       [entity]="entity"
       [typeProduct]="typeProduct.nombreTipo"
       [accountNumber]="product.numeroProducto"
