--- a/src/app/pages/wallet/wallet.component.html
+++ b/src/app/pages/wallet/wallet.component.html
@@ -1,6 +1,6 @@
 <app-header-cbit
-  [routerLinkBack]="routes.back"
-  [routerLinkHelp]="routes.help"
+  (onClickEventBack)="goToPage(routes.back)"
+  (onClickEventHelp)="goToPage(routes.help)"
 ></app-header-cbit>
 <body>
   <div class="container">
