--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,7 +10,9 @@
   <!-- PANTALLA LOGIN -->
 
   <div class="login">
-    <app-header-login (onClickEventHelp)="(routes.help)"></app-header-login>
+    <app-header-login
+      (onClickEventHelp)="goToPage(routes.help)"
+    ></app-header-login>
 
     <!-- FORM LOGIN -->
     <div class="container container-login" *ngIf="!showPasswordForm">
