Edición de eventos a btn-back y btn-help

--- a/src/app/components/marketplace/utils/product/product.component.html
+++ b/src/app/components/marketplace/utils/product/product.component.html
@@ -12,7 +12,7 @@
       <div class="actions">
         <a
           class="btn btn-secondary"
-          routerLink="ecommerce/products/{{ product.id }}"
+          routerLink="/ecommerce/products/{{ product.id }}"
         >
           Ver
         </a>
