--- a/src/app/pages/terms-conditions/terms-conditions.component.css
+++ b/src/app/pages/terms-conditions/terms-conditions.component.css
@@ -6,7 +6,7 @@ body {
   background-color: #f7f7f7;
   width: 90%;
   margin: 1rem auto;
-  padding: 1rem 2rem;
+  padding: 1rem;
   box-shadow: 5px 7px 5px rgb(114, 113, 113);
 }
 .text-2 {
