Agregado el resumen de pago

--- a/src/app/pages/payment-summary/payment-summary.component.html
+++ b/src/app/pages/payment-summary/payment-summary.component.html
@@ -20,7 +20,7 @@
       </div>
       <div class="campo">
         <p class="nombre-item">Observaciones:</p>
-        <p class="valores">Compra Productos</p>
+        <p class="valores">{{ summaryPayment.observaciones }}</p>
       </div>
       <div class="campo">
         <p class="nombre-item">Comercio</p>
