--- a/src/app/components/marketplace/utils/header-marketplace/header-marketplace.component.html
+++ b/src/app/components/marketplace/utils/header-marketplace/header-marketplace.component.html
@@ -1,18 +1,31 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
   <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarToggler"
+      aria-controls="navbarToggler"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse otra" id="navbarToggler">
       <a class="navbar-brand" routerLink="/">
-        <img src="../../../../../assets/marketplace/LogoMarketplace.png" alt="Logo de open banking">
+        <img
+          src="../../../../../assets/marketplace/LogoMarketplace.png"
+          alt="Logo de open banking"
+        />
       </a>
       <ul class="navbar-nav justify-content-center align-items-center">
         <li class="nav-item">
-          <a class="nav-link active" routerLink="/">Productos</a>
+          <a class="nav-link active" routerLink="{{ routes.ecommerce }}"
+            >Productos</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/login">Iniciar sesión</a>
+          <a class="nav-link" routerLink="{{ routes.login }}">Iniciar sesión</a>
         </li>
       </ul>
     </div>
