--- a/src/app/pages/select-entity/select-entity.component.html
+++ b/src/app/pages/select-entity/select-entity.component.html
@@ -1,5 +1,5 @@
 <app-header-cbit
-  (onClickEventBack)="goToPage(routes.back)"
+  (onClickEventBack)="goBack()"
   (onClickEventHelp)="goToPage(routes.help)"
 ></app-header-cbit>
 <div class="container">
