--- a/src/app/pages/tyc-banks/tyc-banks.component.html
+++ b/src/app/pages/tyc-banks/tyc-banks.component.html
@@ -132,7 +132,6 @@
           </p>
         </li>
       </ul>
-
     </div>
     <div class="form-check">
       <input
@@ -149,7 +148,7 @@
     <div class="boton">
       <app-btn-cbit
         [text]="'Aceptar'"
-        (onClickEvent)="goToPage(routes.otp)"
+        (onClickEvent)="goToPage(routes.summary)"
         [disabled]="!tycAccept"
       ></app-btn-cbit>
     </div>
