--- a/src/app/components/lists/grid-entity/grid-entity.component.css
+++ b/src/app/components/lists/grid-entity/grid-entity.component.css
@@ -3,6 +3,9 @@
   grid-template-columns: repeat(3, 1fr);
   gap:0.5rem;
 }
+.select-entity {
+  cursor: pointer;
+}
 .texto{
   text-align: center;
 }
