--- a/src/app/pages/wallet/wallet.component.css
+++ b/src/app/pages/wallet/wallet.component.css
@@ -1,17 +1,29 @@
 p {
   margin: 0;
 }
-.titulo{
+.titulo-boton {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.titulo {
   padding: 1rem 0;
   margin: 0;
   text-align: center;
 }
-.encabezado{
+.bi {
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+.bi:hover {
+  color: #00b0f9;
+}
+.encabezado {
   padding-bottom: 0.5rem;
   position: sticky;
   top: 5rem;
-  background-color: #ECEDF0;
+  background-color: #ecedf0;
 }
-.list{
+.list {
   padding: 0.5rem 0;
 }
