Implementación de pago con bancos, incompleto

--- a/src/app/pages/otp-banks/otp-banks.component.html
+++ b/src/app/pages/otp-banks/otp-banks.component.html
@@ -4,7 +4,7 @@
     (onClickEventHelp)="goToPage(routes.help)"
   ></app-header-cbit>
   <div class="container">
-    <h1 class="titulo">Código de verificación {{ entity.nombre }}</h1>
+    <h1 class="titulo">Código de verificación {{ selectedBank.nombre }}</h1>
     <div class="icono-mensaje">
       <i class="bi bi-chat-dots"></i>
     </div>
