--- a/src/app/pages/tyc-banks/tyc-banks.component.html
+++ b/src/app/pages/tyc-banks/tyc-banks.component.html
@@ -121,14 +121,14 @@
           <p class="form-check-label" for="flexCheckDefault">
             Los datos de usuario procesados por Bancolombia se rigen por la
             Política de Privacidad de Bancolombia. <br />
-            <a href="">Más información</a>
+            <a href="{{ customerTerms }}">Más información</a>
           </p>
         </li>
         <li>
           <p class="form-check-label" for="flexCheckChecked">
             Los datos de la billetera digital de Bancolombia se rigen por la
             Política de Privacidad de Bancolombia. <br />
-            <a href="">Más información</a>
+            <a href="{{ walletTerms }}">Más información</a>
           </p>
         </li>
       </ul>
