Proceso de pago Daviplata 100%, Bancolombia 80%

--- a/src/app/pages/otp-banks/otp-banks.component.html
+++ b/src/app/pages/otp-banks/otp-banks.component.html
@@ -25,7 +25,7 @@
           seg
         </p>
       </div>
-      <app-btn-cbit [text]="'Continuar'"></app-btn-cbit>
+      <app-btn-cbit [text]="'Continuar'" (onClickEvent)="verifyOtp()"></app-btn-cbit>
     </div>
   </div>
 </body>
