Proceso de pago Daviplata 100%, Bancolombia 80%

--- a/src/app/pages/payment-summary/payment-summary.component.html
+++ b/src/app/pages/payment-summary/payment-summary.component.html
@@ -33,7 +33,7 @@
     </div>
     <p>Confirma los datos antes de continuar</p>
     <div class="boton">
-      <app-btn-cbit [text]="'Continuar'" (onClickEvent)="processPayment()"></app-btn-cbit>
+      <app-btn-cbit [text]="'Continuar'" (onClickEvent)="redirect()"></app-btn-cbit>
     </div>
   </div>
 </body>
