Agregado el filtro por categoría

--- a/src/app/components/lists/list-category/list-category.component.html
+++ b/src/app/components/lists/list-category/list-category.component.html
@@ -1,8 +1,8 @@
 <div class="list">
   <div class="category" *ngFor="let category of categories">
     <app-category
-      [nameImage]="category.image"
-      [nameCategory]="category.name"
+      [category]="category"
+      (onCategorySelected)="setCategorySelected($event)"
     ></app-category>
   </div>
 </div>
