--- a/src/app/components/utils/category/category.component.css
+++ b/src/app/components/utils/category/category.component.css
@@ -1,6 +1,10 @@
 .card{
   border: 0;
 }
+.card:hover{
+  cursor: pointer;
+  border: 1px solid #f8f9fa;
+}
 .card-text{
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
