Agregado interceptor para evento de loading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
 
-<app-add-product></app-add-product>
+<!-- <app-add-product></app-add-product> -->
 <!-- <app-dashboard></app-dashboard> -->
 <!-- <app-form-document></app-form-document> -->
 <!-- <app-form-password></app-form-password> -->
