--- a/src/app/pages/add-product/add-product.component.html
+++ b/src/app/pages/add-product/add-product.component.html
@@ -47,6 +47,7 @@
           [type]="'submit'"
           [text]="'Continuar'"
           [disabled]="formValidation.invalid"
+          [loading]="isLoading"
         ></app-btn-cbit>
       </form>
     </div>
