--- a/src/app/pages/form-document/form-document.component.html
+++ b/src/app/pages/form-document/form-document.component.html
@@ -30,6 +30,7 @@
         (onClickEvent)="continue()"
         [text]="'Continuar'"
         [disabled]="!activeBtn"
+        [loading]="isLoading"
       ></app-btn-cbit>
     </div>
   </div>
