--- a/src/app/pages/form-password/form-password.component.html
+++ b/src/app/pages/form-password/form-password.component.html
@@ -50,6 +50,7 @@
         [text]="'Crear CBITBank'"
         [type]="'submit'"
         [disabled]="!formPassword.valid"
+        [loading]="isLoading"
       ></app-btn-cbit>
     </form>
   </div>
