--- a/src/app/pages/form-phone-confirm/form-phone-confirm.component.html
+++ b/src/app/pages/form-phone-confirm/form-phone-confirm.component.html
@@ -48,6 +48,7 @@
       [text]="'Continuar'"
       [disabled]="otpUser.length < 6"
       (onClickEvent)="verifyOtp()"
+      [loading]="isLoading"
     ></app-btn-cbit>
   </div>
 </body>
