--- a/src/app/pages/form-registration/form-registration.component.html
+++ b/src/app/pages/form-registration/form-registration.component.html
@@ -191,6 +191,7 @@
         [text]="'Continuar'"
         [type]="'submit'"
         [disabled]="formUser.invalid"
+        [loading]="isLoading"
       >
       </app-btn-cbit>
     </form>
