--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -95,6 +95,7 @@
           [text]="'Iniciar sesión'"
           [type]="'submit'"
           [disabled]="formPassword.invalid"
+          [loading]="isLoading"
         ></app-btn-cbit>
       </form>
     </div>
