--- a/src/app/pages/menu-registration/menu-registration.component.html
+++ b/src/app/pages/menu-registration/menu-registration.component.html
@@ -33,6 +33,7 @@
     </div>
 
     <app-btn-cbit
+      [loading]="isLoading"
       [text]="'Continuar'"
       [disabled]="!infoPersonalComplete || !selfieComplete || !documentComplete"
       (onClickEvent)="
