--- a/src/app/pages/otp-banks/otp-banks.component.html
+++ b/src/app/pages/otp-banks/otp-banks.component.html
@@ -25,7 +25,11 @@
           seg
         </p>
       </div>
-      <app-btn-cbit [text]="'Continuar'" (onClickEvent)="verifyOtp()"></app-btn-cbit>
+      <app-btn-cbit
+        [text]="'Continuar'"
+        (onClickEvent)="verifyOtp()"
+        [loading]="isLoading"
+      ></app-btn-cbit>
     </div>
   </div>
 </body>
