--- a/src/app/pages/tyc-banks/tyc-banks.component.html
+++ b/src/app/pages/tyc-banks/tyc-banks.component.html
@@ -150,6 +150,7 @@
         [text]="'Aceptar'"
         (onClickEvent)="goToPage(routes.summary)"
         [disabled]="!tycAccept"
+        [loading]="isLoading"
       ></app-btn-cbit>
     </div>
   </div>
