--- a/src/app/pages/form-selfie/form-selfie.component.html
+++ b/src/app/pages/form-selfie/form-selfie.component.html
@@ -22,6 +22,7 @@
         [type]="'button'"
         [disabled]="imageData == ''"
         (onClickEvent)="continue()"
+        [loading]="isLoading"
       >
       </app-btn-cbit>
     </div>
