--- a/src/app/pages/payment-summary/payment-summary.component.html
+++ b/src/app/pages/payment-summary/payment-summary.component.html
@@ -33,7 +33,11 @@
     </div>
     <p>Confirma los datos antes de continuar</p>
     <div class="boton">
-      <app-btn-cbit [text]="'Continuar'" (onClickEvent)="redirect()"></app-btn-cbit>
+      <app-btn-cbit
+        [text]="'Continuar'"
+        (onClickEvent)="redirect()"
+        [loading]="isLoading"
+      ></app-btn-cbit>
     </div>
   </div>
 </body>
