--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <router-outlet></router-outlet>
 
+<!-- <app-otp></app-otp> -->
 <!-- <app-add-product></app-add-product> -->
 <!-- <app-dashboard></app-dashboard> -->
 <!-- <app-form-document></app-form-document> -->
