--- a/src/app/components/utils/otp/otp.component.html
+++ b/src/app/components/utils/otp/otp.component.html
@@ -4,50 +4,44 @@
       <input
         class="form-control digito"
         formControlName="digito1"
-        id="digito1"
         type="tel"
         maxlength="1"
-        (input)="validarSoloNumeros($event, 1)"
+        (keyup)="onInputDigit($event, 0)"
       />
       <input
         class="form-control digito"
         formControlName="digito2"
-        id="digito2"
         type="tel"
         maxlength="1"
-        (input)="validarSoloNumeros($event, 2)"
+        (keyup)="onInputDigit($event, 1)"
       />
       <input
         class="form-control digito"
         formControlName="digito3"
-        id="digito3"
         type="tel"
         maxlength="1"
-        (input)="validarSoloNumeros($event, 3)"
+        (keyup)="onInputDigit($event, 2)"
       />
       <input
         class="form-control digito"
         formControlName="digito4"
-        id="digito4"
         type="tel"
         maxlength="1"
-        (input)="validarSoloNumeros($event, 4)"
+        (keyup)="onInputDigit($event, 3)"
       />
       <input
         class="form-control digito"
         formControlName="digito5"
-        id="digito5"
         type="tel"
         maxlength="1"
-        (input)="validarSoloNumeros($event, 5)"
+        (keyup)="onInputDigit($event, 4)"
       />
       <input
         class="form-control digito"
         formControlName="digito6"
-        id="digito6"
         type="tel"
         maxlength="1"
-        (input)="validarSoloNumeros($event, 6)"
+        (keyup)="onInputDigit($event, 5)"
       />
     </div>
   </form>
