request rejected message v.1

--- a/src/app/components/utils/rejected-message/rejected-message.component.css
+++ b/src/app/components/utils/rejected-message/rejected-message.component.css
@@ -21,9 +21,9 @@ body {
   margin: 0 auto;
   /* background-color: #fff; */
   width: 14rem;
-  height: 15rem;
+  height: 14rem;
   /* color: white; */
-  border: 3px solid #00eaff;
+  border: 3px solid #ffffff;
   border-radius: 4%;
   background-color: #ffffff;
   display: flex;
