--- a/src/app/pages/my-products/my-products.component.html
+++ b/src/app/pages/my-products/my-products.component.html
@@ -21,6 +21,10 @@
           [categorySelected]="categorySelected"
           (onProductSelected)="setProductSelected($event)"
         ></app-list-product-vertical>
+        <div class="btn-adicionar">
+          <i class="bi bi-plus-circle-fill"></i>
+          <p class="txt-solicitar">Solicitar productos</p>
+        </div>
       </div>
     </div>
   </div>
